fix: Further reduce spacing per user request (p: 0.2em, line-height: 1.3, list: 0.1em)

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
   /* Override prose spacing for tighter layout */
   .prose.ProseMirror > * + * {
-    margin-top: 0.75em !important;
+    margin-top: 0.2em !important;
   }
 
   /* Explicit heading styles for ProseMirror */
@@ -19,32 +19,32 @@
     font-weight: 800 !important;
     line-height: 1.2;
     margin-top: 0;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.3em;
     color: #111827;
   }
 
   .ProseMirror h2 {
     font-size: 1.5em !important;
     font-weight: 700 !important;
-    line-height: 1.3;
-    margin-top: 1.25em;
-    margin-bottom: 0.4em;
+    line-height: 1.2;
+    margin-top: 0.8em;
+    margin-bottom: 0.2em;
     color: #1f2937;
   }
 
   .ProseMirror h3 {
     font-size: 1.25em !important;
     font-weight: 600 !important;
-    line-height: 1.4;
-    margin-top: 1em;
-    margin-bottom: 0.4em;
+    line-height: 1.2;
+    margin-top: 0.6em;
+    margin-bottom: 0.2em;
     color: #374151;
   }
 
   .ProseMirror p {
     margin-top: 0;
-    margin-bottom: 0.75em;
-    line-height: 1.65;
+    margin-bottom: 0.2em;
+    line-height: 1.3;
   }
 
   .ProseMirror p.is-editor-empty:first-child::before {
@@ -120,14 +120,14 @@
   .ProseMirror ul:not([data-type="taskList"]) {
     list-style-type: disc !important;
     padding-left: 1.5em;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
   }
 
   .ProseMirror ul ul {
     list-style-type: circle !important;
-    margin-top: 0.25em;
-    margin-bottom: 0.25em;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   .ProseMirror ul ul ul {
@@ -138,14 +138,14 @@
   .ProseMirror ol {
     list-style-type: decimal !important;
     padding-left: 1.5em;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
   }
 
   .ProseMirror ol ol {
     list-style-type: lower-alpha !important;
-    margin-top: 0.25em;
-    margin-bottom: 0.25em;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   .ProseMirror ol ol ol {
@@ -153,15 +153,16 @@
   }
 
   .ProseMirror li {
-    margin-top: 0.1em !important;
-    margin-bottom: 0.1em !important;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
     padding-top: 0 !important;
     padding-bottom: 0 !important;
   }
 
   .ProseMirror li p {
     margin-top: 0 !important;
-    margin-bottom: 0.15em !important;
+    margin-bottom: 0 !important;
+    line-height: 1.3 !important;
   }
 
   .ProseMirror li > p:only-child {
